fixed header so that my name doesnt get cut off at the top

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -67,14 +67,20 @@ img {
 
 /* Navigation */
 
+header {
+  a {
+    @extend .waves-effect;
+    @extend .waves-light;
+  }
+}
+
 .brand-logo {
   margin-top: 8px;
   margin-left: 8px;
   text-transform: uppercase;
-  line-height: 20px;
+  line-height: 24px;
   .subtitle {
-    font-size: 1rem;
-    line-height: 10px;
+    font-size: .9rem;
   }
 }
 
